# rotors_simulator

./: LICENSE  README.md  requirment.sh
control_develop/: CMakeLists.txt  package.xml
control_develop/include/control_develop/: keyboard_control.h  keyboard_control.hpp
control_develop/src/: keyboard_control.cpp  pub_velosity.cpp
mav_comm/: README.md
rotors_simulator/: README.md
rotors_simulator/rotors_control/include/rotors_control/: lee_position_controller.h
rotors_simulator/rotors_gazebo/launch/: mav_with_keyboard.launch
